--- a/battleship.html
+++ b/battleship.html
@@ -3,14 +3,96 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>J_Gaf</title>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
+          type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="css/style.css" rel="stylesheet">
     <script src="js/battleship.js"></script>
 </head>
 <body>
-<div>The Concept is simple; enter coordinates in letter(a-g) number(0-6) format e.g g4    The source is on my <a href="https://github.com/JeggerAgain/battleship.js" target="_blank">Github</a></div>
-<input type="text" id="userguess" name="userguess" />
-<input type="button" onclick="battleship.checkUsersGuess(document.getElementById('userguess').value)" value="Fire!"/>
-<div class="feedHeader">See Results Below</div>
-<div id="outputFeed"></div>
+<div class="battleshipContainer">
+    <div class="battleshipInfo">
+        <div>The Concept is simple; enter coordinates in letter(a-g) number(0-6) format e.g g4</div>
+        <div> (The source is on my <a
+            href="https://github.com/JeggerAgain/battleship.js" target="_blank">Github</a>)
+        </div>
+    </div>
+    <div class="battleshipInputs">
+        <input type="text" class="userguessInput" id="userguess" name="userguess" placeholder="Enter guess..."/>
+        <input type="button" class="fireButton"
+               onclick="battleship.checkUsersGuess(document.getElementById('userguess').value)"
+               value="Fire!"/>
+    </div>
+    <div class="feedHeader">See Results Below</div>
+    <div class="grid">
+        <table class="battleshipTable">
+            <tr class="bsTableRow">
+                <td class="bsTablecell" id="a0">A0</td>
+                <td class="bsTablecell" id="b0">B0</td>
+                <td class="bsTablecell" id="c0">C0</td>
+                <td class="bsTablecell" id="d0">D0</td>
+                <td class="bsTablecell" id="e0">E0</td>
+                <td class="bsTablecell" id="f0">F0</td>
+                <td class="bsTablecell" id="g0">G0</td>
+            </tr>
+            <tr class="bsTableRow">
+                <td class="bsTablecell" id="a1">A1</td>
+                <td class="bsTablecell" id="b1">B1</td>
+                <td class="bsTablecell" id="c1">C1</td>
+                <td class="bsTablecell" id="d1">D1</td>
+                <td class="bsTablecell" id="e1">E1</td>
+                <td class="bsTablecell" id="f1">F1</td>
+                <td class="bsTablecell" id="g1">G1</td>
+            </tr>
+            <tr class="bsTableRow">
+                <td class="bsTablecell" id="a2">A2</td>
+                <td class="bsTablecell" id="b2">B2</td>
+                <td class="bsTablecell" id="c2">C2</td>
+                <td class="bsTablecell" id="d2">D2</td>
+                <td class="bsTablecell" id="e2">E2</td>
+                <td class="bsTablecell" id="f2">F2</td>
+                <td class="bsTablecell" id="g2">G2</td>
+            </tr>
+            <tr class="bsTableRow">
+                <td class="bsTablecell" id="a3">A3</td>
+                <td class="bsTablecell" id="b3">B3</td>
+                <td class="bsTablecell" id="c3">C3</td>
+                <td class="bsTablecell" id="d3">D3</td>
+                <td class="bsTablecell" id="e3">E3</td>
+                <td class="bsTablecell" id="f3">F3</td>
+                <td class="bsTablecell" id="g3">G3</td>
+            </tr>
+            <tr class="bsTableRow">
+                <td class="bsTablecell" id="a4">A4</td>
+                <td class="bsTablecell" id="b4">B4</td>
+                <td class="bsTablecell" id="c4">C4</td>
+                <td class="bsTablecell" id="d4">D4</td>
+                <td class="bsTablecell" id="e4">E4</td>
+                <td class="bsTablecell" id="f4">F4</td>
+                <td class="bsTablecell" id="g4">G4</td>
+            </tr>
+            <tr class="bsTableRow">
+                <td class="bsTablecell" id="a5">A5</td>
+                <td class="bsTablecell" id="b5">B5</td>
+                <td class="bsTablecell" id="c5">C5</td>
+                <td class="bsTablecell" id="d5">D5</td>
+                <td class="bsTablecell" id="e5">E5</td>
+                <td class="bsTablecell" id="f5">F5</td>
+                <td class="bsTablecell" id="g5">G5</td>
+            </tr>
+            <tr class="bsTableRow">
+                <td class="bsTablecell" id="a6">A6</td>
+                <td class="bsTablecell" id="b6">B6</td>
+                <td class="bsTablecell" id="c6">B6</td>
+                <td class="bsTablecell" id="d6">D6</td>
+                <td class="bsTablecell" id="e6">E6</td>
+                <td class="bsTablecell" id="f6">F6</td>
+                <td class="bsTablecell" id="g6">G6</td>
+            </tr>
+        </table>
+    </div>
+    <div id="outputFeed"></div>
+</div>
 </body>
 </html>
